classDiagram
    class Book {
        -String bookId
        -String title
    }
    class Member {
        -String memberId
        -String name
    }
    class LibraryService {
        <<interface>>
        +borrowBook()
        +returnBook()
    }
    LibraryService --> Book
    LibraryService --> Member
